plugins {
    id 'java'
    id 'checkstyle'
    id 'pmd'
}

version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    implementation 'org.slf4j:slf4j-api:2.0.5'
    testImplementation 'ch.qos.logback:logback-classic:1.4.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

test {
    useJUnitPlatform()
}

checkstyle {
    maxWarnings = 3
    configFile = file("${rootDir}/config/google-checkstyle.xml")
    toolVersion = "10.9.0"
}

pmd {
    ignoreFailures = true
    consoleOutput = true
    rulesMinimumPriority = 5
    ruleSets = ["${rootDir}/config/jpinpoint-rules.xml"]
}

pmdMain {
    reports {
        xml.destination = file("${pmd.reportsDir}/pmd-report.xml")
        xml.enabled = true
    }
}
